[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
teloxide = { version = "0.12.2", features = ["macros"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.27.0", features = ["full"] }
substring = "1.4.5"
http = "0.2.9"
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }
